--- a/index.html
+++ b/index.html
@@ -1,43 +1,68 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alexsandro Xavier da Silveira</title>
+    <style>
+        body{
+            background-color: #C03221 ;
+        }
+        .about-me {
+            font-family:  sans-serif;
+            
+        }
+        .name{
+            font-family: georgia, serif;
+        }
+        .text-white {
+            color: #F7F7FF;
+        }
+        .summary-list {
+            color: #F2D0A4;
+            text-decoration: none;
+            font-size: 1.5em;
+        }
+    </style>
 </head>
+
 <body>
     <img src="alex.jpg" alt="Alexsandro no Pier da Barra de Guaratiba, Rio de Janeiro" width="150px" id="#minhaFoto">
-    
-    <p id="sobreMim"> Meu nome é Alexsandro Xavier, tenho 22 anos, moro no bairro de Guaratiba na capital do Rio de Janeiro. Sou apaixonado pelo Flamengo, algo que veio de família, assim como a minha paixão por tecnologia.</p>
+
+    <p id="about-me" class="about-me text-white"> Meu nome é <span class="name"> Alexsandro Xavier </span>, tenho 22 anos, moro no bairro de Guaratiba na capital do Rio de
+        Janeiro. Sou apaixonado pelo Flamengo, algo que veio de família, assim como a minha paixão por tecnologia.</p>
     <br>
     <h1>Lista de Habilidades</h1>
     <ul id="habilidades">
-        <li> 
-            <strong> Paciência </strong> 
+        <li class="text-white">
+            <strong> Paciência </strong>
         </li>
-        <li>Criatividade</li>
-        <li>Perseverança</li>
-        <li>Simplicidade</li>
-    </ol>
-    <a href="#minhaFoto">Clique aqui para ver minha foto</a>
-    <p id="blogPreferido">Aqui vai o link para um blog que eu gosto muito! <a href="https://www.akitaonrails.com/" target="_blank"> <em>Akita on Rails</em> </a></p>
+        <li class="text-white">Html</li>
+        <li class="text-white">Css</li>
+        <li class="text-white">JavaScript</li>
+        </ol>
+        <a href="#minhaFoto">Clique aqui para ver minha foto</a>
+        <p id="blogPreferido" class="text-white">Aqui vai o link para um blog que eu gosto muito! <a href="https://www.akitaonrails.com/"
+                target="_blank"> <em>Akita on Rails</em> </a></p>
 
-    <H2>Sumário</H2>
-    <ol>
-        <li>
-            <a href="#minhaFoto">Minha foto</a>
-        </li>
-        <li>
-            <a href="#sobreMim">Conheça um pouco mais sobre mim!</a>
-        </li>
-        <li>
-            <a href="#habilidades">Minhas Habilidades</a>
-        </li>
-        <li>
-            <a href="#blogPreferido">Blog que eu acompanho</a>
-        </li>
-    </ol>
+        <H2>Sumário</H2>
+        <ol>
+            <li>
+                <a href="#minhaFoto" class="summary-list">Minha foto</a>
+            </li>
+            <li>
+                <a href="#about-me" class="summary-list">Conheça um pouco mais sobre mim!</a>
+            </li>
+            <li>
+                <a href="#habilidades" class="summary-list">Minhas Habilidades</a>
+            </li>
+            <li>
+                <a href="#blogPreferido" class="summary-list">Blog que eu acompanho</a>
+            </li>
+        </ol>
 
 </body>
+
 </html>
